--- a/app/src/main/res/layout/kingdom_overview_layout.xml
+++ b/app/src/main/res/layout/kingdom_overview_layout.xml
@@ -9,8 +9,8 @@
         android:layout_width="fill_parent"
         android:layout_height="150dp"
         android:id="@+id/cardview_buildings"
-        card_view:cardCornerRadius="2dp"
-        android:layout_marginTop="36dp"
+        card_view:cardCornerRadius="4dp"
+        android:layout_marginTop="25dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
@@ -38,12 +38,13 @@
                 android:gravity="left"/>
 
             <Button
+                android:id="@+id/buildings_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
                 android:layout_below="@id/textview_finished_buildings"
-                android:style="?android:attr/borderlessButtonStyle"
+                style="?android:attr/borderlessButtonStyle"
                 android:textColor="#f4bf42"
                 android:text="GO TO BUILDINGS"
                 android:clickable="true"/>
@@ -57,7 +58,7 @@
         android:layout_width="fill_parent"
         android:layout_height="150dp"
         android:id="@+id/cardview_resources"
-        card_view:cardCornerRadius="2dp"
+        card_view:cardCornerRadius="4dp"
         android:layout_below="@+id/cardview_buildings"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -97,12 +98,13 @@
                 android:gravity="left"/>
 
             <Button
+            android:id="@+id/resources_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:textColor="#f4bf42"
-            android:style="?android:attr/borderlessButtonStyle"
+            style="?android:attr/borderlessButtonStyle"
             android:text="GO TO RESOURCES"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
@@ -113,8 +115,8 @@
         android:layout_width="fill_parent"
         android:layout_height="150dp"
         android:id="@+id/cardview_troops"
-        card_view:cardCornerRadius="2dp"
-        android:layout_marginTop="38dp"
+        card_view:cardCornerRadius="4dp"
+        android:layout_marginTop="31dp"
         android:layout_below="@+id/cardview_resources"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
@@ -141,13 +143,14 @@
                 android:layout_centerInParent="true"
                 android:gravity="left"/>
             <Button
+                android:id="@+id/troops_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
                 android:layout_below="@id/textview_finished_troops"
                 android:textColor="#f4bf42"
-                android:style="?android:attr/borderlessButtonStyle"
+                style="?android:attr/borderlessButtonStyle"
                 android:text="GO TO TROOPS"
                 android:clickable="true"/>
         </RelativeLayout>
