--- a/app/src/main/res/layout/troops_overview_layout.xml
+++ b/app/src/main/res/layout/troops_overview_layout.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@android:color/holo_purple"  >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/holo_green_dark">
 
     <ListView
         android:id="@+id/troopsList"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll"/>
+        android:layout_alignParentTop="true">
+    </ListView>
 
 </RelativeLayout>
