--- a/app/src/main/res/layout/troops_overview_listitem.xml
+++ b/app/src/main/res/layout/troops_overview_listitem.xml
@@ -7,11 +7,13 @@
     <TextView
         android:id="@+id/tvHP"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingRight="20dp" />
     <TextView
         android:id="@+id/tvAP"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:paddingRight="20dp" />
     <TextView
         android:id="@+id/tvDP"
         android:layout_width="wrap_content"
