--- a/app/src/main/res/layout/activity_main_fragment_container.xml
+++ b/app/src/main/res/layout/activity_main_fragment_container.xml
@@ -11,7 +11,8 @@
     android:paddingTop="0dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.greenfox.peridot.peridot_coz_android.activity.MainActivity"
-    tools:showIn="@layout/activity_main_toolbar_layout">
+    tools:showIn="@layout/activity_main_toolbar_layout"
+    android:background="@android:color/holo_purple" >
 
     <FrameLayout
         android:id="@+id/content_frame"
