--- a/app/src/main/res/layout/buildings_overview_layout.xml
+++ b/app/src/main/res/layout/buildings_overview_layout.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_green_dark">
+    android:padding="15dp">
 
     <ListView
         android:id="@+id/listViewBuilding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:dividerHeight="15dp">
     </ListView>
 
     <android.support.design.widget.FloatingActionButton
