--- a/app/src/main/res/layout/nav_drawer_header.xml
+++ b/app/src/main/res/layout/nav_drawer_header.xml
@@ -18,7 +18,7 @@
         android:layout_width="93dp"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/ic_castle_white"
+        android:src="@drawable/crown"
         android:layout_weight="0.62" />
 
     <TextView
